--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,4 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  p Talent wins games, but teamwork and intelligence wins championships.
