--- a/views/index.pug
+++ b/views/index.pug
@@ -4,3 +4,6 @@ block content
   h1= title
   p Welcome to #{title}
   p Talent wins games, but teamwork and intelligence wins championships.
+  button(type="button", class="btn btn-info") press more for the content
+
+ // div(id='faster') Increase the speed
