index and layout changed

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,4 +6,5 @@ block content
   p Talent wins games, but teamwork and intelligence wins championships.
   button(type="button", class="btn btn-info") press more for the content
 
- // div(id='faster') Increase the speed
+ //
+  div(id='faster') Increase the speed
