--- a/views/index.pug
+++ b/views/index.pug
@@ -4,4 +4,20 @@ block content
   h1= title
   p Welcome to #{title}
   p Talent wins games, but teamwork and intelligence wins championships.
-  button(type="button", class="btn btn-info") press more for the content
+  button(type="button", class="btn btn-info",onclick="goFaster()") press more for the content
+  hr 
+  div#faster Increase the speed
+
+
+
+
+
+  script. 
+      var mph=20;
+      var change=1;
+      function goFaster(){
+        mph=mph+change;
+        change=change+1;
+        document.getElementById("faster").innerHTML= `MPH ${mph} with Changes ${change}`;
+        //console.log(`MPH ${mph} with Changes ${change}`);
+      }
