--- a/views/index.pug
+++ b/views/index.pug
@@ -21,3 +21,5 @@ block content
         document.getElementById("faster").innerHTML= `MPH ${mph} with Changes ${change}`;
         //console.log(`MPH ${mph} with Changes ${change}`);
       }
+
+  a(href="/phone") view phones   
