--- a/views/phone.pug
+++ b/views/phone.pug
@@ -3,10 +3,15 @@ extends layout
 block content
   h1= title 
   -var result = [{Phone_Name: "OnePlus", Phone_price: 200000, Phone_Storage: 256},{Phone_Name: "Iphone 7", Phone_price: 400000, Phone_Storage: 512},{Phone_Name: "Samsung", Phone_price: 1000000, Phone_Storage: 1024}];
-  .container-fluid
-    .row
-        each item in result
-            .col-sm-2
-                div Phone_Name: #{item.Phone_Name}
-                div Phone_price: #{item.Phone_price}
-                div Phone_Storage:#{item.Phone_Storage}
+    .container-fluid
+        .row
+            each item,index in result
+                .col-sm-2(onclick=`buy(${index})`)
+                    p Phone_Name: #{item.Phone_Name}
+                    p Phone_price: #{item.Phone_price}
+                    p Phone_Storage:#{item.Phone_Storage}
+                
+    script. 
+        function buy(index){
+            alert(`you purchase item: ${index+1}`)
+        }
