--- a/views/Choose.pug
+++ b/views/Choose.pug
@@ -5,7 +5,7 @@ block content
   - let image_names = ["iphone.jpg","oneplus.jpg","pixel.jpg","samsung.jpg","vi.jpg"]
    -for(let i=0; i<3; i++){
     -let random= Math.floor(Math.random()*5)
-     img(src=`/images/${image_names[random]}` alt=`Image Name Elephant${random}` height="300px" width="300px")
+     img(src=`/images/${image_names[random]}` alt=`Image Name Phone${random}` height="300px" width="300px")
     -}
 
     
